# BYOD-system-level-simulator

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml  requirements.txt
docker/: Containerfile  dockerctl.sh
sst-elements/: Makefile.am  README.md  configure.ac
sst-elements/src_cpp/: boilerplate_new.cc  boilerplate_new.h  sst_byod_config.h  sst_byod_config.h.in  sst_byod_config.h.in~  util.h
sst-elements/src_cpp/CPU/: streaming_cpu.cc  streaming_cpu.h
sst-elements/src_cpp/Events/: analog_event.h  complex_event.h  digital_event.h
sst-elements/src_cpp/OptoElectronic/: adc.cc  adc.h  amplitude_modulator.cc  amplitude_modulator.h  clements.cc  clements.h  clements_svd.cc  clements_svd.h  dac.cc  dac.h  photo_detector.cc  photo_detector.h
sst-elements/src_cpp/OptoElectronic/Submodules/: modulators.cc  modulators.h
tutorials/: README.md
tutorials/1_Photonic_Tensor_Core/: Photonic_Tensor_Core_Tutorial.ipynb  run_sweep.py  sst_config_no1.py  sst_config_no2.py  sst_config_no3.py
tutorials/1_Photonic_Tensor_Core/output/: dramsim3.json  dramsim3.txt  sim_output.csv  sim_output.json  sweep_out.txt
utils/: byod_components.py  clements_utils.py
utils/DRAM_configs/: LPDDR4_8Gb_x16_2400.ini
utils/submodules/accelergy_dac_plugin/: X2X_ladder.py
